--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@bpmn-io/properties-panel": "^3.4.0",
     "bpmn-js": "^15.1.3",
     "bpmn-js-properties-panel": "^5.0.0",
+    "camunda-bpmn-moddle": "^7.0.1",
     "htm": "^3.1.1",
     "ids": "^1.0.5",
     "jquery": "^3.5.1",
