--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@bpmn-io/extract-process-variables": "^0.8.0",
     "@bpmn-io/properties-panel": "^3.4.0",
     "bpmn-js": "^15.1.3",
     "bpmn-js-properties-panel": "^5.0.0",
