--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "raw-loader": "^4.0.2",
     "sirv-cli": "^2.0.0",
     "webpack": "^5.16.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "patch-package": "^8.0.0"
   }
 }
