--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bpmn-js-properties-panel": "^5.0.0",
     "bpmn-js-token-simulation": "^0.32.0",
     "camunda-bpmn-moddle": "^7.0.1",
+    "diagram-js": "^14.4.1",
     "htm": "^3.1.1",
     "ids": "^1.0.5",
     "jquery": "^3.5.1",
@@ -53,10 +54,10 @@
     "copy-webpack-plugin": "^11.0.0",
     "less": "^4.1.0",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^8.0.0",
     "raw-loader": "^4.0.2",
     "sirv-cli": "^2.0.0",
     "webpack": "^5.16.0",
-    "webpack-cli": "^5.0.0",
-    "patch-package": "^8.0.0"
+    "webpack-cli": "^5.0.0"
   }
 }
