--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "copy-webpack-plugin": "^11.0.0",
     "less": "^4.1.0",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^8.0.0",
     "raw-loader": "^4.0.2",
     "sirv-cli": "^2.0.0",
     "webpack": "^5.16.0",
-    "webpack-cli": "^5.0.0",
-    "patch-package": "^8.0.0"
+    "webpack-cli": "^5.0.0"
   }
 }
