--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "all": "run-s build",
     "dev": "run-s build:less watch:js",
     "start": "run-s build serve",
-    "serve": "sirv public --dev",
+    "serve": "sirv public --dev --host",
     "build": "run-s build:*",
     "build:less": "lessc src/app.less public/app.css",
     "build:js": "webpack -c webpack.config.js",
