--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "bpmn-js-token-simulation": "^0.32.0",
     "camunda-bpmn-moddle": "^7.0.1",
     "diagram-js": "^14.4.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "htm": "^3.1.1",
     "ids": "^1.0.5",
     "jquery": "^3.5.1",
     "min-dash": "^4.0.0",
-    "min-dom": "4.1.0"
+    "min-dom": "4.1.0",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
