--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "@bpmn-io/extract-process-variables": "^0.8.0",
     "@bpmn-io/properties-panel": "^3.4.0",
-    "bpmn-js": "^15.1.3",
+    "bpmn-js": "^16.0.0",
     "bpmn-js-properties-panel": "^5.0.0",
     "bpmn-js-token-simulation": "^0.32.0",
     "camunda-bpmn-moddle": "^7.0.1",
@@ -54,18 +54,18 @@
     "ids": "^1.0.5",
     "jquery": "^3.5.1",
     "min-dash": "^4.0.0",
-    "min-dom": "4.1.0",
+    "min-dom": "^5.1.1",
     "webpack-dev-server": "^5.0.4",
-    "ws": "^8.17.0"
+    "ws": "^8.17.1"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "less": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.0",
     "raw-loader": "^4.0.2",
     "sirv-cli": "^2.0.0",
-    "webpack": "^5.16.0",
+    "webpack": "^5.92.1",
     "webpack-cli": "^5.0.0"
   }
 }
