--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,10 @@
 version: '3'
 
 services:
-  server:
-    build:
-      context: .
-      dockerfile: ./server/Dockerfile
-    ports:
-      - "8082:8082"
-    volumes:
-      - .:/usr/src/app
 
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  opaca-bpmn-modeller:
+    build: .
     ports:
       - "8080:8080"
     volumes:
       - .:/usr/src/app
-    #depends_on:
-      #- server
