--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bpmn-js-properties-panel": "^5.0.0",
     "bpmn-js-token-simulation": "^0.32.0",
     "camunda-bpmn-moddle": "^7.0.1",
+    "cors": "^2.8.5",
     "diagram-js": "^14.4.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
