--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bpmn-js": "^16.0.0",
     "bpmn-js-properties-panel": "^5.0.0",
     "bpmn-js-token-simulation": "^0.32.0",
+    "bpmn-auto-layout": "^0.5.0",
     "camunda-bpmn-moddle": "^7.0.1",
     "cors": "^2.8.5",
     "diagram-js": "^14.4.1",
