add refinement prompt

--- a/opaca-bpmn-editor/Dockerfile
+++ b/opaca-bpmn-editor/Dockerfile
@@ -15,6 +15,9 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
+# Build including stylings
+RUN npm run build
+
 EXPOSE 8080
 
 # Start the application
