--- a/opaca-bpmn-editor/package.json
+++ b/opaca-bpmn-editor/package.json
@@ -4,7 +4,7 @@
   "description": "A bpmn-js modeler with properties panel and token-simulator and some extensions for interpretation",
   "main": "app/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --host 0.0.0.0",
+    "dev": "webpack-dev-server --host 0.0.0.0",
     "start": "run-s dev",
     "serve": "sirv public --dev",
     "build": "run-s build:*",
@@ -43,10 +43,10 @@
   "dependencies": {
     "@bpmn-io/extract-process-variables": "^0.8.0",
     "@bpmn-io/properties-panel": "^3.4.0",
+    "bpmn-auto-layout": "^0.5.0",
     "bpmn-js": "^16.0.0",
     "bpmn-js-properties-panel": "^5.0.0",
     "bpmn-js-token-simulation": "^0.32.0",
-    "bpmn-auto-layout": "^0.5.0",
     "camunda-bpmn-moddle": "^7.0.1",
     "cors": "^2.8.5",
     "diagram-js": "^14.4.1",
@@ -57,6 +57,7 @@
     "jquery": "^3.5.1",
     "min-dash": "^4.0.0",
     "min-dom": "^5.1.1",
+    "puppeteer": "^23.7.1",
     "webpack-dev-server": "^5.0.4",
     "ws": "^8.17.1"
   },
