--- a/opaca-bpmn-editor/Dockerfile
+++ b/opaca-bpmn-editor/Dockerfile
@@ -1,55 +1,29 @@
-# Use an official Node.js runtime as a parent image
-FROM node:20
+# Use the official Puppeteer image as the base
+FROM ghcr.io/puppeteer/puppeteer:latest
 
-# Set the working directory in the container
+# Set the working directory
 WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json files
+# Copy application files
 COPY package*.json ./
-# Copy patches for interpreter-callbacks, so they can be applied in npm install
 COPY patches ./patches
+COPY . .
+
+# Ensure non-root user has ownership
+USER root
+RUN chown -R pptruser:pptruser /usr/src/app
+
+# Switch to non-root user
+USER pptruser
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
-COPY . .
-
-# Install necessary libraries for Puppeteer to run
-RUN apt-get update && apt-get install -y \
-    chromium \
-    socat \
-    libnss3 \
-    libxss1 \
-    libasound2 \
-    libatk1.0-0 \
-    libatk-bridge2.0-0 \
-    libcups2 \
-    libdrm2 \
-    libx11-xcb1 \
-    libxcomposite1 \
-    libxdamage1 \
-    libxrandr2 \
-    libgbm1 \
-    libpango-1.0-0 \
-    libpangocairo-1.0-0 \
-    libgtk-3-0 \
-    libnss3 \
-    libxshmfence1 \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
-    && mkdir -p /usr/src/app/public \
-    && chown -R pptruser:pptruser /usr/src/app
-
-USER pptruser
-
-# Build including stylings
+# Build the application
 RUN npm run build
 
-EXPOSE 8080
+# Expose required ports
+EXPOSE 8080 9222
 
-EXPOSE 9222
-
-# Start modeler and puppeteer sequentially
+# Start the application
 CMD ["./start.sh"]
