--- a/opaca-bpmn-editor/package.json
+++ b/opaca-bpmn-editor/package.json
@@ -57,7 +57,7 @@
     "jquery": "^3.5.1",
     "min-dash": "^4.0.0",
     "min-dom": "^5.1.1",
-    "puppeteer": "^23.7.1",
+    "puppeteer": "19.2.0",
     "webpack-dev-server": "^5.0.4",
     "ws": "^8.17.1"
   },
